--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
     </div>
 
 
-    <!-- Write your code -->
+    <!-- shahbaz -->
+    <div class="shahbaz">
+      <div class="left">
+          <!-- <span>PERICULA</span> -->
+          <p>PERICULA</p>
+          <h3>Mea modus volumus 
+              abhorreant</h3>
+      </div>
+      <div class="right">
+          <input type="search" id="search" placeholder="Email">
+          <button>Subscribe</button>
+      </div>
+  </div>
+
+  <!-- footer -->
+  
+
+
+
 </body>
 </html>
